[package]
name = "par_tar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.53"
blake3 = "1.3.1"
derive_more = "0.99.17"
futures = "0.3.19"
maplit = "1.0.2"
rayon = "1.5.1"
tar = "0.4.38"
tokio = { version = "1.16.1", features = ["full", "macros", "test-util", "tracing"] }
tokio-stream = { version ="0.1.8", features = [ "fs" ] }
walkdir = "2.3.2"
zstd = "0.10.0+zstd.1.5.2"

[dev-dependencies]
tempfile = "3.3.0"

